--- a/admin/protected/modules/setting/views/default/breadcrumb.html
+++ b/admin/protected/modules/setting/views/default/breadcrumb.html
@@ -4,11 +4,10 @@
         <li>Quản lí tin tuyển dụng</li>
     </ul>
 </nav>
-<nav id="topicPath" metal:define-macro="profile">
+<nav id="topicPath" metal:define-macro="index">
     <ul>
         <li class="top"><a href="/admin">Home</a></li>
-        <li ><a href="/admin/setting/">Setting</a></li>
-        <li>Profile</li>
+        <li>Setting</li>
     </ul>
 </nav>
 <nav id="topicPath" metal:define-macro="view">
