--- a/admin/protected/widgets/views/menu.html
+++ b/admin/protected/widgets/views/menu.html
@@ -41,42 +41,8 @@
 <section tal:condition="php: user['is_super'] EQ 1">
 <h2>Quản lí cài đặt</h2>
 <ul>
-    <li><a href="/tag">Cài đặt trang</a></li>
-    <li><a href="/tag/edit">Cài đặt SNS</a></li>
+    <li><a href="/admin/setting">Cài đặt trang</a></li>
 </ul>
 </section>
-
-<!--<section tal:condition="php: user['is_super'] EQ 1">-->
-    <!--<h2>コメント管理</h2>-->
-    <!--<ul>-->
-        <!--<li><a href="/comment">一覧</a></li>-->
-        <!--<li><a href="/comment/Ng/index">NGワード設定（一覧）</a></li>-->
-    <!--</ul>-->
-<!--</section>-->
-
-<!--<section tal:condition="php: user['is_super'] EQ 1">-->
-    <!--<h2>マクロ・ウィジェット管理</h2>-->
-    <!--<ul>-->
-        <!--<li><a href="/customer/">一覧</a></li>-->
-        <!--<li><a href="/customer/edit">新規登録</a></li>-->
-    <!--</ul>-->
-<!--</section>-->
-
-
-<!--<section tal:condition="php: user['is_super'] EQ 1">-->
-    <!--<h2>会員管理</h2>-->
-    <!--<ul>-->
-        <!--<li><a href="/customer/">一覧</a></li>-->
-        <!--<li><a href="/customer/edit">新規登録</a></li>-->
-    <!--</ul>-->
-<!--</section>-->
-
-<!--<section tal:condition="php: user['is_super'] EQ 1">-->
-    <!--<h2>設定管理</h2>-->
-    <!--<ul>-->
-        <!--<li><a href="/setting/site">一覧</a></li>-->
-        <!--<li><a href="/setting/profile">新規登録</a></li>-->
-    <!--</ul>-->
-<!--</section>-->
 
 
