--- a/site/protected/views/layouts/main.html
+++ b/site/protected/views/layouts/main.html
@@ -100,7 +100,7 @@
             <div class="box-item-sidebar">
                 <div class="title-global icon"  style="margin-bottom: 0;"><h3>Video giới thiệu</h3></div>
                 <div class="content">
-                    <iframe width="100%" height="200" src="https://www.youtube.com/embed/QXo8O7EKaHc" frameborder="0" allowfullscreen=""></iframe>
+                    <iframe width="100%" height="200" src="https://www.youtube.com/embed/${this/site_setting/intro_video|''}" frameborder="0" allowfullscreen=""></iframe>
                 </div>
             </div>
 
@@ -129,9 +129,9 @@
     <div id="footer" style="background: url('${params/siteUrl}/images/site/footer.jpg'); position: relative; top: 15px; ">
         <div class="l-footer">
             <span style="font-size: 16px;">
-                <a target="_blank" href="http://www.youtube.com/everlandvn" title="Kênh Youtube An Thanh"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/youtube.png"/></a>
-                <a target="_blank" href="https://twitter.com/everlandvn"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/Twitter.png"/></a>
-                <a target="_blank" href="http://www.facebook.com/everlandvn.vn" title="Facebook An Thanh"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/fb.png"/></a><br/>
+                <a target="_blank" href="http://www.youtube.com/${this/site_setting/yotube|''}" title="Kênh Youtube An Thanh"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/youtube.png"/></a>
+                <a target="_blank" href="https://twitter.com/${this/site_setting/tw|''}"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/Twitter.png"/></a>
+                <a target="_blank" href="http://www.facebook.com/${this/site_setting/fb|''}" title="Facebook An Thanh"><img alt="" style="margin-bottom: 8px; margin-top: 0px;" src="http://everlandvn.vn/themes/fb.png"/></a><br/>
                 Trụ sở chính: 495 Man Thiện Tăng Nhơn Phú A, Quận 9, TP Hồ Chí Minh<br/>
                 Hotline: Mr Diệp 0913565671<br/>
                 Tel: (08) 6278 9911 - Email: anthanhreal@gmail.com<br/>
