--- a/admin/protected/modules/setting/views/default/index.html
+++ b/admin/protected/modules/setting/views/default/index.html
@@ -1,67 +1,74 @@
-<!--<h1>Quản lí tin tuyển dụng</h1>-->
-<!--<article>-->
-    <!--<p>Để tìm bài tin. Nhập các tiêu chí tìm kiếm, vui lòng click vào nút Search.</p>-->
-<!--</article>-->
+<div tal:replace="structure php:CHtml::statefulForm('','post',array('id'=>'article'))"/>
 
-<form name="frmSearch" action="/admin/recruitment/search" method="post">
-    <div class="mBoxitem_table">
-        <table class="tableTate" cellspacing="0" cellpadding="0" border="0">
-            <tr>
-                <th>Tiêu đề</th>
-                <td><input  value="${search/title|''}" name="search[title]" class="txtbox" type="text" onKeyDown="ignoreESC(this,event.keyCode)" onFocus="toggleColor(this)" onBlur="toggleColor(this)" style="width: 300px;"/></td>
-            </tr>
-            <tr tal:condition="php: role EQ 1">
-                <th>Người đăng</th>
-                <td>
-                    <input  value="${search/user_name|''}" name="search[user_name]" class="txtbox" type="text" onKeyDown="ignoreESC(this,event.keyCode)" onFocus="toggleColor(this)" onBlur="toggleColor(this)" style="width: 300px;"/>
-                </td>
-            </tr>
-        </table>
-        <div class="BtnArea" style="text-align: center !important;">
-            <input class="btnMiddle themeNormal" type="submit" title="Search" value="Search"/>
+<div>
+    <h1>Tùy chỉnh trang web</h1>
+    <article>
+        <p>
+            Sau khi nhập các thông tin cần thiết, bạn hãy click vào nút Save.
+        </p>
+    </article>
+</div>
+<aside>
+    <p>※<span class="txtWarning">*</span>Hãy nhập đầy đủ thông tin.</p>
+</aside>
+
+<div class="messageBox">
+    <p class="txtWarning">
+        <strong tal:condition="msg">Thao tác hoàn thành</strong>
+    </p>
+</div>
+
+<div class="columnContainer">
+    <div class="tabBox">
+        <input type="hidden" name="setting[id]" value="${contentSetting/id|''}"/>
+
+        <div class="mBoxitem_table">
+            <table cellpadding="0" cellspacing="0" border="0" class="tableTate">
+                <tr>
+                    <th>Facebook fanpage</th>
+                    <td>
+                        <input type="text" name="setting[fb]" maxlength="100" value="${contentSetting/fb|''}"  class="txtbox title txt_en" style="width:120px;" id="title" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>Twitter page</th>
+                    <td>
+                        <input type="text" name="setting[tw]" maxlength="100" value="${contentSetting/tw|''}"  class="txtbox title txt_en" style="width:120px;" id="title" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>Youtube chanel</th>
+                    <td>
+                        <input type="text" name="setting[yotube]" maxlength="100" value="${contentSetting/yotube|''}"  class="txtbox title txt_en" style="width:120px;" id="title" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>Skype</th>
+                    <td>
+                        <input type="text" name="setting[skype]" maxlength="100" value="${contentSetting/skype|''}"  class="txtbox title txt_en" style="width:120px;" id="title" />
+                    </td>
+                </tr>
+            </table>
         </div>
+
+        <div class="mBoxitem_table">
+            <table cellpadding="0" cellspacing="0" border="0" class="tableTate">
+                <tr>
+                    <th>Video giớ thiệu</th>
+                    <td>http://youtube.com/
+                        <input type="text" name="setting[intro_video]" maxlength="100" value="${contentSetting/intro_video|''}"  class="txtbox title txt_en" style="width:120px;" id="title" />
+                    </td>
+                </tr>
+            </table>
+        </div>
+
     </div>
-</form>
 
-<form method="post" action="./" name="form">
-    <p class="centering txtWarning" tal:condition="nodata">Không tồn tại tin.</p>
-    <div class="mBoxitem_table">
-        <div class="mBoxitem_listinfo">
-            <p class="pageList_data"><strong>Số lượng tin：</strong>${count}</p>
-        </div>
+</div>
 
-        <div class="mBoxitem_listinfo">
-            <div tal:replace="structure php:this.widget('PaginationWidget',array('pages'=>pages),true)"></div>
-            <ul class="pageList_link" tal:replace="">
-                <li><a href="javascript:void(0);">≪</a></li>
-                <li><a href="javascript:void(0);">&lt;</a></li>
-                <li><a href="javascript:void(0);">1</a></li>
-                <li><a href="javascript:void(0);">2</a></li>
-                <li><strong>3</strong></li>
-                <li><a href="javascript:void(0);">4</a></li>
-                <li><a href="javascript:void(0);">5</a></li>
-                <li><a href="javascript:void(0);">&gt;</a></li>
-                <li><a href="javascript:void(0);">≫</a></li>
-            </ul>
-        </div>
-
-        <table cellpadding="0" cellspacing="0" border="0" class="tableYoko">
-            <thead>
-            <tr>
-                <th>Tiêu đề</th>
-                <th class="thYokoM">Người đăng</th>
-                <th class="thYokoM">Ngày đăng</th>
-                <th class="thYokoM">Ngày sữa</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tr tal:repeat="item items">
-                <td tal:content="structure php:Helpers::getNumChars(item['title'], 15)"></td>
-                <td tal:content="user_name"></td>
-                <td><span tal:condition="exists:item/modified" tal:content="dateformat:item/created">2012/04/13 23:00</span></td>
-                <td><span tal:condition="exists:item/modified" tal:content="dateformat:item/modified">2012/04/13 23:00</span></td>
-                <td class="tdYoko_btn_s1"><a href="/admin/recruitment/view?id=${item/id}" class="btnTable themeNormal">Chi tiết</a></td>
-            </tr>
-        </table>
+<div class="BtnArea">
+    <div class="BtnAreaitem">
+        <tal:block class="BtnAreaitem" tal:content="structure php:CHtml::submitButton('Save',array('name' => 'commit','class'=>'btnMiddle themeNormal'))"/>
+        <input class="btnMiddle themeNormal" type="button" title="Cancel" value="Cancel" onclick="window.location.href='/admin/';"/>
     </div>
-</form>
+</div>
